# rlearning3d

./: .gitignore  .gitmodules  CMakeLists.txt  EnvironmentUtils.cpp  EnvironmentUtils.h  FeatureExtractor.cpp  LearningConstants.h  README.md  SoccerAgentServer_Main.cpp  SoccerAgentService.cpp  SoccerAgentService.h
agents/: CMakeLists.txt  DummyAgent.h  KickBallAgent.cpp  KickBallAgent.h
api/: soccer3d.proto
client/: Dockerfile  environment.yml  run_codegen.py  soccer_env.py  start_soccer_training.sh
client/core/: soccer_env.py
config/: log.conf  steal_ball.json
rl_agents/: BaseLearningAgent.cpp  BaseLearningAgent.h  MimicLearningAgent.cpp  MimicLearningAgent.h  RacerLearningAgent.cpp  RunningLearningAgent.cpp  RunningLearningAgent.h  StealBallLearningAgent.cpp  StealBallLearningAgent.h  ZMPKickLearningAgent.cpp  ZMPKickLearningAgent.h
scripts/: build_proto.sh  extract_episode_data.sh  start_training.sh
simulator_interface/: FeatureExtractor.h  SoccerAgentServer_Main.cpp  SoccerAgentService.cpp  SoccerAgentService.h
simulator_interface/agents/: CMakeLists.txt  DummyAgent.cpp  FollowBallAgent.cpp  FollowBallAgent.h
simulator_interface/rl_agents/: BaseLearningAgent.cpp  BaseLearningAgent.h  KickLearningAgent.cpp  KickLearningAgent.h  RacerLearningAgent.cpp  RacerLearningAgent.h  RunningLearningAgent.cpp  StealBallLearningAgent.cpp
utils/: BodyFeaturesUtils.cpp  BodyFeaturesUtils.h  FeatureExtractor.cpp  FeatureExtractor.h  LearningConstants.h
